--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "three": "^0.183.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
